--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
           </div>
           <div class="flex margin-top-3 space-between">
             <a class="button arrow-button exp bold" href="https://www.linkedin.com/in/hung-tran-profile/" target="_blank">LinkedIn <span class="text-arrow">&rarr;</span></a>
-            <a class="button arrow-button exp bold" href="mailto:tranndhungg@gmail.com" target="_blank">tranndhungg@gmail.com <span class="text-arrow">&rarr;</span></a>
+            <a class="button arrow-button exp bold" href="mailto:dht4@sfu.ca" target="_blank">dht4@sfu.ca <span class="text-arrow">&rarr;</span></a>
           </div>
           <div class="about-image-container margin-top-3 center">
             <img class="about-image width-100 height-auto" id="about-1" src="img/about copy.png" width="1965" height="1965" />
@@ -112,7 +112,7 @@
       <p class="footer bold">Designed and coded by me. Based in Vancouver, BC.</p>
       <p class="footer margin-bottom bold">© 2025 Hung. All rights reserved.</p>
       <div class="contacts-container">
-        <a href="mailto:tranndhungg@gmail.com" target="_blank"><img class="contacts" src="img/mail_mail.png" width="3300" height="3300"></a>
+        <a href="mailto:dht4@sfu.ca" target="_blank"><img class="contacts" src="img/mail_mail.png" width="3300" height="3300"></a>
         <a href="https://linkedin.com/in/hung-tran-profile" target="_blank"><img class="contacts" src="img/mail_linkedin.png" width="3300" height="3300"></a>
         <a href="https://www" target="_blank"><img class="contacts" src="img/mail_tiktok.png" width="3300" height="3300"></a>
       </div>
