--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     <p class="footer bold">Designed and coded by me. Based in Vancouver, BC.</p>
     <p class="footer margin-bottom bold">© 2025 Hung. All rights reserved.</p>
     <div class="contacts-container">
-      <a href="mailto:tranndhungg@gmail.com" target="_blank"><img class="contacts" src="img/mail_mail.png" width="3300" height="3300"></a>
+      <a href="mailto:dht4@sfu.ca" target="_blank"><img class="contacts" src="img/mail_mail.png" width="3300" height="3300"></a>
       <a href="https://linkedin.com/in/hung-tran-profile" target="_blank"><img class="contacts" src="img/mail_linkedin.png" width="3300" height="3300"></a>
       <a href="https://www" target="_blank"><img class="contacts" src="img/mail_tiktok.png" width="3300" height="3300"></a>
     </div>
